--- a/Parcial1/index.html
+++ b/Parcial1/index.html
@@ -3,7 +3,11 @@
 <body>
  <h1>Emiliano Torales</h1>
  <h2>Matricula: S22004357
- <img src="credencialuv.jpg">
+	 <img src="https://firebasestorage.googleapis.com/v0/b/ete12-javascript.appspot.com/o/Im%C3%A1genes%2FWIN_20240208_09_32_30_Pro.jpg?alt=media&token=01b44f80-831a-41e8-9a6d-8c26c571eba1"> </br>
 
  <a href="holam.html"> Hola Mundo </a> </br>
- <a href="vars.html">
+ <a href="vars.html"> vars </a> </br>
+ <a href="triangulo.html"> Triangulo </a>
+</body>
+</html>
+
