--- a/Parcial1/index.html
+++ b/Parcial1/index.html
@@ -7,7 +7,10 @@
 
  <a href="holam.html"> Hola Mundo </a> </br>
  <a href="variables.html"> vars </a> </br>
- <a href="triangulo.html"> Triangulo </a>
+ <a href="triangulo.html"> Triangulo </a> </br>
+ <a href="ciclos.html"> Ciclos </a> </br>
+<a href="ciclosdom.html"> Ciclos DOM </a> </br>
+<a href="calculadora.html"> Calculadora </a> 
 </body>
 </html>
 
