calculadora.html, calculadora.js

--- a/Parcial1/calculadora.html
+++ b/Parcial1/calculadora.html
@@ -14,6 +14,7 @@
     <button onclick="restar()">Restar</button>
     <button onclick="multiplicar()">Multiplicar</button>
     <button onclick="dividir()">Dividir</button>
+   <button onclick="raizalasegunda()">x^2</button>
     <button onclick="raizCuadrada()">Raíz Cuadrada</button>
     <button onclick="potencia()">Potencia</button>
     <br><br>
@@ -21,5 +22,6 @@
 
     <script src="calculadora.js"></script>
 </body>
-</html>
+</html
+>
 
