alumno.html, alumno.js

--- a/Parcial1/index.html
+++ b/Parcial1/index.html
@@ -3,7 +3,7 @@
 <body>
  <h1>Emiliano Torales</h1>
  <h2>Matricula: S22004357
-	 <img src="https://firebasestorage.googleapis.com/v0/b/ete12-javascript.appspot.com/o/Im%C3%A1genes%2FWIN_20240208_09_32_30_Pro.jpg?alt=media&token=01b44f80-831a-41e8-9a6d-8c26c571eba1"> </br>
+	 <img src=https://firebasestorage.googleapis.com/v0/b/emilianote12-javascript.appspot.com/o/JavaScript%2Fimages%2FWIN_20240208_09_32_30_Pro.jpg?alt=media&token=bb35fcf3-d0e9-4d86-b88e-0b8e629422b2> </br>
 
  <a href="holam.html"> Hola Mundo </a> </br>
  <a href="variables.html"> vars </a> </br>
